# style-bench

./: .coverage  .gitignore  .pre-commit-config.yaml  doodling.ipynb  main.py  plotting-analysis.ipynb  pyproject.toml
configs/: sample-analyze.yaml  sample-compare.yaml  sample-metrics.yaml
sample_data/: 100_bush_pairs.json  100_obama_pairs.json
src/scripts/: analyze.py  compare.py
src/style_bench/: config.py  lexical.py  model-based.py  models.py  output_manager.py  plotting.py  style.py  syntactic.py  types.py  utils.py
src/style_bench/scripts/: analyze.py
tests/: test_analyze_config.py  test_extract_texts.py
