[project]
name = "style-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "scipy>=1.16.1",
    "spacy>=3.8.7",
    "textdistance>=4.6.3",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "torch>=2.7.0",
]

[project.scripts]
analyze = "style_bench.scripts.analyze:main"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "rich>=14.1.0",
    "ruff>=0.12.8",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/style_bench"] 

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
